package Akali.Consultor;

public class SearchController {
}
