package Akali.Consultor;

public class SearchResultsController {
}
