package Akali;

import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.ComboBox;
import javafx.scene.control.Label;
import javafx.scene.control.TextField;

public class ChangeUserController {
    @FXML
    private Label title;
    @FXML
    private TextField name;
    @FXML
    private TextField email;
    @FXML
    private TextField password;
    @FXML
    private TextField matricle;
    @FXML
    private ComboBox privilege;
    @FXML
    private Button save;
    @FXML
    private Button cancel;

    @FXML
    void HandleSave(){}
    @FXML
    void HandleBack(){}
    @FXML
    void initialize(){}
}
