@startuml

title __AKALI's Class Diagram__\n

  package Akali {
    package Akali.resource {
      abstract class AbstractResource {
      }
    }
  }
  

  package Akali {
    package Akali.user {
      abstract class AbstractUser {
      }
    }
  }
  

  package Akali {
    package Akali.manager {
      class AddController {
      }
    }
  }
  

  package Akali {
    class AddUserController {
    }
  }
  

  package Akali {
    package Akali.translator {
      class AmmendController {
      }
    }
  }
  

  package Akali {
    class ChangeUserController {
    }
  }
  

  package Akali {
    package Akali.user {
      class Consultant {
      }
    }
  }
  

  package Akali {
    class Main {
    }
  }
  

  package Akali {
    package Akali.manager {
      class ManageController {
      }
    }
  }
  

  package Akali {
    package Akali.manager {
      class ManageResourceController {
      }
    }
  }
  

  package Akali {
    package Akali.manager {
      class ManagerPendingController {
      }
    }
  }
  

  package Akali {
    package Akali.translator {
      class OngoingController {
      }
    }
  }
  

  package Akali {
    package Akali.resource {
      class Recording {
      }
    }
  }
  

  package Akali {
    package Akali.consultor {
      class SearchController {
      }
    }
  }
  

  package Akali {
    package Akali.user {
      class SearchResultsController {
      }
    }
  }
  

  package Akali {
    package Akali.resource {
      class Text {
      }
    }
  }
  

  package Akali {
    package Akali.translator {
      class TranslateController {
      }
    }
  }
  

  package Akali {
    package Akali.translator {
      class TranslatorPendingController {
      }
    }
  }
  

  package Akali {
    package Akali.admin {
      class UserListController {
      }
    }
  }
  

  Consultant -up-|> AbstractUser
  Main -up-|> Application
  Recording -up-|> AbstractResource
  Text -up-|> AbstractResource


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
